added cors and removed error from permset and added lead listview

--- a/force-app/main/default/classes/weDemoController.cls
+++ b/force-app/main/default/classes/weDemoController.cls
@@ -4,6 +4,9 @@ public class weDemoController {
 public static Boolean resetDemo(String demoDate, Decimal CLV) {
     Boolean success = true;
     
+    //Find contact john.fisher-demo@gmail.com
+    Contact john = [SELECT Id, Name FROM Contact WHERE Email = 'john.fisher-demo@gmail.com' LIMIT 1];
+    
     try{
         //delete all leads related to John
         List<Lead> leads = [SELECT Id, Name FROM Lead WHERE Email = 'john.fisher-demo@gmail.com'];
@@ -14,7 +17,7 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     
     try{
         //delete all test drives where John is the driver
-        List<Test_Drive__c> tds = [SELECT Id, Name FROM Test_Drive__c WHERE Driver__c = '0031t00000AEpK0AAL'];
+        List<Test_Drive__c> tds = [SELECT Id, Name FROM Test_Drive__c WHERE Driver__c = :john.Id];
         delete tds;
     } catch(DmlException e) {
         success = false;
@@ -22,7 +25,7 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     
     try{
         //delete all orders from John
-        List<Order> orders = [SELECT Id, Name FROM Order WHERE Contact__c = '0031t00000AEpK0AAL'];
+        List<Order> orders = [SELECT Id, Name FROM Order WHERE Contact__c = :john.Id];
         delete orders;
     } catch(DmlException e) {
         success = false;
@@ -30,7 +33,7 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     
     try{
         //delete all cases from John
-        List<Case> cases = [SELECT Id FROM Case WHERE ContactId = '0031t00000AEpK0AAL'];
+        List<Case> cases = [SELECT Id FROM Case WHERE ContactId = :john.Id];
         delete cases;
     } catch(DmlException e) {
         success = false;
@@ -38,7 +41,7 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     
     try{
         //set John Customer Lifetimevalue
-        Contact c = [SELECT Id, Cust360_LTV__c FROM Contact WHERE Id = '0031t00000AEpK0AAL']; 
+        Contact c = [SELECT Id, Cust360_LTV__c FROM Contact WHERE Id = :john.Id]; 
         c.Cust360_LTV__c = CLV;
         update c;
     } catch(DmlException e) {
@@ -47,7 +50,7 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     
     try{
         //delete all portal feed item actions from Daniel
-        List<portal_feed_item__c> pfis = [SELECT Id FROM portal_feed_item__c WHERE Contact__c = '0031t0000025d6KAAQ' AND type__c = 'action required']; 
+        List<portal_feed_item__c> pfis = [SELECT Id FROM portal_feed_item__c WHERE Contact__c = :john.Id AND type__c = 'action required']; 
         delete pfis;
     } catch(DmlException e) {
         success = false;
@@ -55,9 +58,7 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     
     try{
         //change date on events to demo date +1
-        //lunch = 00U1t000006WNA4EAO
-        //sales conversation = 00U1t000006WdcREAS
-        List<Event> events = [SELECT id,ActivityDate,ActivityDateTime FROM Event WHERE id = '00U1t000006WNA4EAO' OR id = '00U1t000006WdcREAS']; 
+        List<Event> events = [SELECT id,ActivityDate,ActivityDateTime FROM Event WHERE Subject = 'Don Arne Sales Conversation' OR Subject = 'Lunch']; 
         for(Event e : events){
             e.ActivityDate = Date.valueOf(demoDate).addDays(1);
             e.ActivityDateTime = Datetime.newInstance(e.ActivityDate.year(), e.ActivityDate.month(), e.ActivityDate.day(), e.ActivityDateTime.hour(), e.ActivityDateTime.minute(), e.ActivityDateTime.second());
