--- a/force-app/main/default/classes/naviController.cls
+++ b/force-app/main/default/classes/naviController.cls
@@ -5,27 +5,38 @@ public class naviController {
     public static Boolean startTestDrive() {
         //get latest testdrive for data
         Test_Drive__c td = [SELECT Id, Name FROM Test_Drive__c ORDER BY CreatedDate DESC LIMIT 1];
+        //get Config
+                demo_setting__c demoSetting = [SELECT dealer_name__c, dealer_email__c FROM demo_setting__c WHERE demo_key__c = 'masterSetting' LIMIT 1];
+                
+        //get Driver Contact
+                Contact driver = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_1' LIMIT 1];
+                 //get Dealer Contact
+                Contact dealer = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_2' LIMIT 1];
+                //get Dealer User
+                Id dealerUser_id = [SELECT Id FROM User WHERE Name = :demoSetting.dealer_name__c LIMIT 1].Id;
+                
+               
         
                 //create dealer message (portal feed item)
                 portal_feed_item__c pfi = new portal_feed_item__c(
                 	action_no__c = 'Cancel',
                     action_yes__c = 'Start Process',
                     category_1__c = 'Test drive',
-                    Contact__c = '0031t0000025d6KAAQ',
+                    Contact__c = driver.Id,
                     date__c = Datetime.now(),
                     icon_2__c = 'standard:contact',
                     icon_1__c = 'custom:custom31',
                     message_1__c = 'is about to begin. Please initiate consent process with',
                     message_2__c = '.',
-                    record_id_2__c = '0031t00000AEpK0AAL',
+                    record_id_2__c = driver.Id,
                     record_id_1__c = td.Id,
-                    record_name_2__c = 'John Fisher',
+                    record_name_2__c = driver.Name,
                     record_name_1__c = 'Testdrive',
                     SLA_active__c = true,
                     SLA_in_minutes__c = 10,
                     title__c = 'Test Drive starting',
                     type__c = 'action required',
-                    User__c = '0051t000000SXZ0AAO'
+                    User__c = dealerUser_id
                 );
                 insert pfi;   
         
@@ -40,9 +51,9 @@ public class naviController {
                     message_1__c = 'in progress.',
                     message_2__c = '',
                     record_id_1__c = td.id,
-                    record_id_2__c = '0031t00000AEpK0AAL',
+                    record_id_2__c = driver.Id,
                     record_name_1__c = td.Name,
-                    record_name_2__c = 'John Fisher'
+                    record_name_2__c = driver.Name
                 );
                 EventBus.publish(message);
         
