--- a/force-app/main/default/classes/weDemoController.cls
+++ b/force-app/main/default/classes/weDemoController.cls
@@ -4,12 +4,12 @@ public class weDemoController {
 public static Boolean resetDemo(String demoDate, Decimal CLV) {
     Boolean success = true;
     
-    //Find contact  john.fisher-demo@gmail.com
-    Contact john = [SELECT Id, Name FROM Contact WHERE Email = 'john.fisher-demo@gmail.com' LIMIT 1];
+    //Find demo contact
+    Contact john = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_1' LIMIT 1];
     
     try{
-        //delete all leads related to John
-        List<Lead> leads = [SELECT Id, Name FROM Lead WHERE Email = 'john.fisher-demo@gmail.com'];
+        //delete all leads related to a testdrive
+        List<Lead> leads = [SELECT Id, Name FROM Lead WHERE td_date_requested__c != Null];
         delete leads;
     } catch(DmlException e) {
         success = false;
