removed SDO deployment issues. Package can be deployed to SDO now

--- a/force-app/main/default/classes/weDemoController.cls
+++ b/force-app/main/default/classes/weDemoController.cls
@@ -5,7 +5,9 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     Boolean success = true;
     
     //Find demo contact
-    Contact john = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_1' LIMIT 1];
+    Contact john = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_02' LIMIT 1];
+    //Find demo dealer contact
+    Contact dealer = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_01' LIMIT 1];
     
     try{
         //delete all leads related to a testdrive
@@ -50,7 +52,7 @@ public static Boolean resetDemo(String demoDate, Decimal CLV) {
     
     try{
         //delete all portal feed item actions from Daniel
-        List<portal_feed_item__c> pfis = [SELECT Id FROM portal_feed_item__c WHERE Contact__c = :john.Id AND type__c = 'action required']; 
+        List<portal_feed_item__c> pfis = [SELECT Id FROM portal_feed_item__c WHERE Contact__c = :dealer.Id AND type__c = 'action required']; 
         delete pfis;
     } catch(DmlException e) {
         success = false;
