refactored message component

--- a/force-app/main/default/classes/MessageLibrary.cls
+++ b/force-app/main/default/classes/MessageLibrary.cls
@@ -83,4 +83,90 @@ public with sharing class MessageLibrary {
         );
         EventBus.publish(message_config_created);
     }
+    
+    // Test Drive Form Messages
+      //td-contact-activity	
+      public static void tdContactActivity(){
+            Contact driver = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_02' LIMIT 1];
+            general_message__e msg = new general_message__e(
+                main_icon__c = 'standard:contact',
+                headline__c = 'Contact Activity',
+                category_1__c = 'Contact',
+                category_2__c = 'Context:',
+                icon_1__c = 'standard:contact',
+                icon_2__c = 'standard:contact',
+                message_1__c = 'logged in via VW ID',
+                message_2__c = 'Test Drive Request Form on https://www.volkswagen.de/app/formulare/vw-de/probefahrt',
+                record_id_1__c = driver.Id,
+                record_id_2__c = '',
+                record_name_1__c = driver.Name,
+                record_name_2__c = ''
+            );
+            EventBus.publish(msg);
+    	}
+      //td-dealer-activity	
+		public static void tdDealerActivity(){
+            Account dealer = [SELECT Id, Name FROM Account WHERE Demo_Key__c = 'Account_01' LIMIT 1];
+            general_message__e msg = new general_message__e(
+                main_icon__c = 'standard:person_account',
+                headline__c = 'Dealer Activity',
+                category_1__c = 'Dealer',
+                category_2__c = 'Strategy:',
+                category_3__c = 'Context:',
+                icon_1__c = 'standard:person_account',
+                icon_2__c = 'standard:contact',
+                message_1__c = 'matched to test drive scheduling request',
+                message_2__c = 'Zip code proximity match',
+                message_3__c = 'Test Drive Request Form on https://www.volkswagen.de/app/formulare/vw-de/probefahrt',
+                record_id_1__c = dealer.Id,
+                record_id_2__c = '',
+                record_name_1__c = dealer.Name,
+                record_name_2__c = ''
+            );
+            EventBus.publish(msg);
+    	}
+    
+      //td-scheduler-request
+      		public static void tdSchedulerRequest(String appointment){
+            Account dealer = [SELECT Id, Name FROM Account WHERE Demo_Key__c = 'Account_01' LIMIT 1];
+            general_message__e msg = new general_message__e(
+                main_icon__c = 'standard:event',
+                headline__c = 'Scheduler Request',
+                category_1__c = 'Dealer',
+                category_2__c = 'Context:',
+                icon_1__c = 'standard:person_account',
+                message_1__c = '- schedule request for ' + appointment + ' -  return free slots for activity \"test drive\"',
+                message_2__c = 'Test Drive Request Form on https://www.volkswagen.de/app/formulare/vw-de/probefahrt',
+                record_id_1__c = dealer.Id,
+                record_id_2__c = '',
+                record_name_1__c = dealer.Name,
+                record_name_2__c = ''
+            );
+            EventBus.publish(msg);
+    	}
+     
+        //just a test message
+    public static void plaintest() {
+        general_message__e message = new general_message__e(
+            main_icon__c = 'standard:person_account',
+            headline__c = 'Dealer Activity',
+            category_1__c = 'Dealer',
+            category_2__c = 'Strategy:',
+            category_3__c = 'Context:',
+            icon_1__c = 'standard:person_account',
+            icon_2__c = '',
+            icon_3__c = '',
+            message_1__c = 'matched to test drive scheduling request',
+            message_2__c = 'Zip code proximity match',
+            message_3__c = 'Test Drive Request Form on https://www.volkswagen.de/app/formulare/vw-de/probefahrt',
+            record_id_1__c = '',
+            record_id_2__c = '',
+            record_id_3__c = '',
+            record_name_1__c = 'dealer.Name',
+            record_name_2__c = '',
+            record_name_3__c = '',
+            image_resource_name__c = 'idbuzzconfig'
+        );
+        EventBus.publish(message);
+    }
 }
