--- a/force-app/main/default/classes/TestDriveController.cls
+++ b/force-app/main/default/classes/TestDriveController.cls
@@ -9,7 +9,7 @@ public class TestDriveController {
     @AuraEnabled
     public static Test_Drive__c getTestDrive() {
         //get Test Drive Driver
-        Contact driver = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_1' LIMIT 1];
+        Contact driver = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_02' LIMIT 1];
         Test_Drive__c theTest =[SELECT Date__c,assigned_Vehicle__r.VIN__c,Vehicle__c FROM Test_Drive__c WHERE Driver__c = :driver.Id LIMIT 1];
 
         return theTest;
@@ -20,5 +20,24 @@ public class TestDriveController {
     public static String getDocumentId(String cId) {
         String theContent = [SELECT Id FROM ContentVersion WHERE ContentDocumentId =: cId].Id;
         return theContent;
+    }
+    
+   @AuraEnabled
+       public static String updatePfi(){
+        system.debug('updatePfi on TestDriveController'); 
+        String returnstring = 'success';
+        Portal_feed_item__c pfi = [SELECT Id, SLA_achieved_since__c, SLA_active__c FROM Portal_feed_item__c WHERE SLA_active__c = true LIMIT 1];
+        pfi.SLA_achieved_since__c = DateTime.now();
+        pfi.SLA_active__c = false;
+        try{update pfi;} catch (Exception e) {
+            returnstring = 'error' + e.getMessage();
+        }
+        //set testdrive status to completed
+        Contact driver = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_02' LIMIT 1];
+        Test_Drive__c td =[SELECT Date__c,Status__c FROM Test_Drive__c WHERE Driver__c = :driver.Id LIMIT 1];
+		td.Status__c = 'Completed';
+        update td;
+        
+        return returnstring;
     }
 }
