--- a/force-app/main/default/classes/naviController.cls
+++ b/force-app/main/default/classes/naviController.cls
@@ -13,7 +13,7 @@ public class naviController {
                  //get Dealer Contact
                 Contact dealer = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_01' LIMIT 1];
                 //get Dealer User
-                Id dealerUser_id = [SELECT Id FROM User WHERE Name = :demoSetting.dealer_name__c LIMIT 1].Id;
+                Id dealerUser_id = [SELECT Id FROM User WHERE UserName = :demoSetting.dealer_name__c LIMIT 1].Id;
                 
                
         
